feat: use virtual threads